# coilcalc

./: Cargo.toml  webpack.config.js
src/: app.rs  current_loop.rs  lib.rs  utils.rs
static/: index.html
