[package]
name = "coilcalc"
version = "0.1.0"
authors = ["DomiDre <homiedomi@gmail.com>"]
edition = "2018"
description = "Mini app to calculate the magnetic field produced by a coil set"
repository = "https://github.com/domidre/coilcalc"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.57"
yew = "0.11.0"